<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@raw/beach2"
    android:orientation="vertical"
    tools:ignore="UnusedAttribute" >

    <LinearLayout
        android:id="@+id/middle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="150dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/key_c"
            android:layout_width="100dp"
            android:layout_height="340dp"
            android:layout_margin="12dp"
            android:background="@drawable/button_c"
            android:text="@string/c_fix"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <Button
            android:id="@+id/key_d"
            android:layout_width="100dp"
            android:layout_height="325dp"
            android:layout_margin="12dp"
            android:background="@drawable/button_d"
            android:text="@string/d_fix"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <Button
            android:id="@+id/key_e"
            android:layout_width="100dp"
            android:layout_height="310dp"
            android:layout_margin="12dp"
            android:background="@drawable/button_e"
            android:text="@string/e_fix"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <Button
            android:id="@+id/key_f"
            android:layout_width="100dp"
            android:layout_height="295dp"
            android:layout_margin="12dp"
            android:background="@drawable/button_f"
            android:text="@string/f_fix"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <Button
            android:id="@+id/key_g"
            android:layout_width="100dp"
            android:layout_height="280dp"
            android:layout_margin="12dp"
            android:background="@drawable/button_g"
            android:text="@string/g_fix"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <Button
            android:id="@+id/key_a"
            android:layout_width="100dp"
            android:layout_height="265dp"
            android:layout_margin="12dp"
            android:background="@drawable/button_a"
            android:text="@string/a_fix"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <Button
            android:id="@+id/key_b"
            android:layout_width="100dp"
            android:layout_height="250dp"
            android:layout_margin="12dp"
            android:background="@drawable/button_b"
            android:text="@string/b_fix"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <Button
            android:id="@+id/key_c2"
            android:layout_width="100dp"
            android:layout_height="235dp"
            android:layout_margin="12dp"
            android:background="@drawable/button_c"
            android:text="@string/c_fix"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Start!"
        android:id="@+id/start_button"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="94dp" />

</RelativeLayout>